--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body{
     justify-content: center;
     align-items: center;
     
-    background: linear-gradient(45deg, rgb(18, 17, 17)),rgb(83, 75, 75);
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,0.8016456582633054) 0%, rgba(166,241,216,0.9276960784313726) 0%, rgba(197,235,227,0.7904411764705882) 36%, rgba(132,224,242,1) 80%);
 }
 
 .container{
